<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Crossroads</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button_lbl">Login</string>
    <string name="title_activity_reviewer_home">ReviewerHomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_signup">Sign Up</string>
    <string name="lbl_signout">Sign Out</string>
    <string name="title_activity_donate">Donate</string>
    <string name="donate">Donate</string>
    <string name="item_description">Enter item description...</string>
    <string name="action_done">Done</string>
    <string name="title_activity_receiver_item_details">ReceiverItemDetailsActivity</string>
    <string name="donor_name">Donor Name</string>
    <string name="donate_date">Donated Date:</string>
    <string name="description">Description</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title_activity_donor">DonorActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="pickup_address">Enter pickup address</string>
    <string name="item_condition">Item Condition</string>
    <string name="condition_label">Item Condition: </string>
    <string name="pickup_date_label">Pickup Date:</string>
    <string name="pickup_address_label">Drop-off: </string>
    <string name="view_messages">Chat Room</string>
    <string name="pickup_date">10/30/2014 (enter pickup date)</string>
    <string name="message_hint">Say something...</string>
    <string name="profile_me">My Profile icon</string>
    <string name="profile_other">Other profile icon</string>
    <string name="username">username</string>
    <string name="create_date">11/10/2014 8:00AM</string>
    <string name="send">Send</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="take_pic">Take a Picture</string>
    <string name="pick_gallery">Pick from Gallery</string>
    <string name="max_num">140</string>
    <string name="description_hint">Write item description...</string>
    <string name="error_notext">Please enter text with 140 characters or less.</string>
    <string name="pending">Pending</string>

    <string-array name="item_category">
        <item>Books</item>
        <item>Clothing</item>
        <item>Computer</item>
        <item>Pharmaceuticals</item>
        <item>Electronics</item>
        <item>Food or Beverage</item>
        <item>Furniture</item>
        <item>Household Goods</item>
        <item>Medical</item>
        <item>Office</item>
        <item>Sports</item>
        <item>Tents</item>
        <item>Tools and Machinery</item>
        <item>Toys</item>
        <item>Transportation</item>
        <item>Other</item>
    </string-array>
    <string-array name="item_condition">
        <item>New</item>
        <item>Lightly Used</item>
        <item>Heavily Used</item>
        <item>Broken</item>
    </string-array>
	<string name="item_new">New</string>
	<string name="item_lightly_used">Lightly Used</string>
	<string name="item_heavily_used">Heavily Used</string>
	<string name="item_broken">Broken</string>
    <string name="cancel">Cancel</string>
    <string name="accept_label">Accept</string>
    <string name="title_activity_donor_item_details">Item Details</string>
    <string name="close">Close</string>
    <string name="my_donations">My Donations</string>
    <string name="donate_now">Donation now</string>
    <string name="no_items">No items</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_howto">HowtoActivity</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>
    <string name="title_activity_donation_flow">DonationFlowActivity</string>
    <string name="add_photo">Add a Photo</string>
    <string name="write_desc">Write Description</string>
    <string name="pick_condition">Pick Item Condition</string>
    <string name="plan_delivery">Drop Off Location</string>
    <string name="send_to_crossroads">Send to Crossroads</string>
    <string name="make_donation">Make a Donation</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="reject_confirm">Reject this item?</string>

</resources>
