<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="horizontal" >
    <LinearLayout
    android:id="@+id/llOtherUser"
    android:layout_width="54dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	    <TextView
	        android:id="@+id/tvProfileLeftUserName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="12sp"
	        android:textColor="#367588"
	        android:text="@string/username" />
	    <TextView 
	        android:id="@+id/tvMessageCratedAt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="9sp"
	        android:textColor="#666"
	        android:text="@string/create_date" />
    </LinearLayout>
    <TextView
        android:textSize="16sp"
        android:id="@+id/tvBody"
        android:padding="0dp"
        android:lines="2"
        android:ellipsize="end"
        android:layout_marginRight="54dp"
        android:layout_width="match_parent"
        android:layout_height="54dp">
    </TextView>
    <ImageView
        android:id="@+id/ivProfileRight"
        android:contentDescription="@string/profile_me"
        android:layout_marginLeft="-54dp"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:src="@drawable/ic_me" />
</LinearLayout>
